--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html, body {
 }
 
 h1{
-  border-left: 2px solid #00f28f;
+  border-left: 2px solid #b266b2;
   font-size: 48px;
   font-weight: 400;
   padding-left: 20px;
@@ -16,18 +16,17 @@ h1{
 form input {
   background: #f0f0f0;
   border: none;
-  border-left: 2px solid #fff;
 
-  font-size: 36px;
+  font-size: 20px;
   padding: 20px;
   width: 100%;
 
-  transition: background 2s, border-left 2s;
+  transition: background 2s, border 1s;
 }
 
 form input:focus {
   background: #fff;
-  border-left: 2px solid#000;
+  border: 2px solid#000;
   box-shadow: none;
   outline: none;
 }
@@ -39,7 +38,7 @@ button.btn {
   color: #00f28f;
   cursor: pointer;
 
-  font-size: 36px;
+  font-size: 20px;
   padding: 20px 24px;
 
   transition: background 2s, color 2s;
@@ -58,7 +57,6 @@ button.btn:hover {
 
 li {
   padding-left: 20px;
-  border-left: 2px solid #000;
-  font-size: 36px;
+  font-size: 20px;
   margin: 0 0 36px;
 }
